# Brownian-motion-app

bm-app/: package-lock.json  package.json  vite.config.ts
bm-app/src/: main.ts
bm-app/src-tauri/: Cargo.toml  tauri.conf.json
bm-app/src-tauri/src/: main.rs
brownian-motion/: .gitignore  Cargo.toml  LICENSE_MIT
brownian-motion/examples/: main.rs
brownian-motion/src/: lib.rs
