[package]
name = "brownian-motion"
version = "0.1.0"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[[example]]
name = "main"

[dependencies]
wasm-bindgen = "0.2.99"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rand_distr = "0.4.3"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
